--- a/lib/l10n/app_ar.arb
+++ b/lib/l10n/app_ar.arb
@@ -1,6 +1,6 @@
 {
- "placed" : "وضعت",
- "preparing" : "خطة",
+ "readyToServe" : "جاهز للخدمة",
+ "collectTheOrder" : "اجمع الطلب",
  "orderno" : "رقم الأمر",
  "tableno" : "رقم الطاولة",
  "viewmore" : "عرض المزيد"
