--- a/lib/l10n/app_en.arb
+++ b/lib/l10n/app_en.arb
@@ -1,6 +1,6 @@
 {
- "placed" : "Placed",
- "preparing" : "Preparing",
+ "readyToServe" : "Ready To Serve",
+ "collectTheOrder" : "Collect The Order",
  "orderno" : "Order No",
  "tableno" : "Table No",
  "viewmore" : "View More"
